--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ server.port=8080
 
 spring.web.resources.add-mappings=false
 
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/spotlightzim-realm
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/realms/spotlightzim-realm/protocol/openid-connect/certs
+
